...
                                <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Send" image="ArrowUp-right"/>
                                <buttonConfiguration key="configuration" style="plain" title="Create a Wallet">
                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                </buttonConfiguration>
...
                                <color key="tintColor" name="TxtBtnSec1"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Already Have a Wallet">
                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                </buttonConfiguration>
...
                                        <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Send" image="ArrowUp-right"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Use Social">
                                            <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                        </buttonConfiguration>
...
                                                <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Send" image="ArrowUp-right"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Sign in with Apple">
                                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                                </buttonConfiguration>
...
                                <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Send" image="ArrowUp-right"/>
                                <buttonConfiguration key="configuration" style="plain" title="Get Started">
                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                </buttonConfiguration>
...
                                <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Send" image="ArrowUp-right"/>
                                <buttonConfiguration key="configuration" style="plain" title="Next">
                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                </buttonConfiguration>
...
                                        <color key="tintColor" name="TxtB6"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Advanced">
                                            <fontDescription key="titleFontDescription" name="Figtree-Medium" family="Figtree" pointSize="18"/>
                                        </buttonConfiguration>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Extra word (passphrase)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="bIm-xp-dm5" customClass="Validator
                                                        <rect key="frame" x="0.0" y="57" width="343" height="34"/>
                                                        <color key="backgroundColor" name="BG4"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Wallet Address" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zN1-he-MJi" customClass="ValidatorTextField
                                                        <rect key="frame" x="0.0" y="57" width="343" height="34"/>
                                                        <color key="backgroundColor" name="BG4"/>
...
                                        <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Send" image="ArrowUp-right"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Import">
                                            <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                        </buttonConfiguration>
...
                                        <color key="tintColor" name="TxtBtnPrim1"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Continue">
                                            <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                        </buttonConfiguration>
...
        <scene sceneID="PjW-is-Yde">
            <objects>
                <viewController storyboardIdentifier="info" id="TVd-Nl-aAH" customClass="OnboardingPageViewController" customModule="Kukai_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="PTk-8S-Cr9">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
