...
                                                        <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                        <state key="normal" title="Send" image="ArrowUp-right"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="View">
                                                            <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                                        </buttonConfiguration>
...
                                        <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Send" image="ArrowUp-right"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Ok, I saved it">
                                            <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                        </buttonConfiguration>
...
                                <inset key="imageEdgeInsets" minX="16" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Send" image="ArrowUp-right"/>
                                <buttonConfiguration key="configuration" style="plain" title="OK">
                                    <fontDescription key="titleFontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                </buttonConfiguration>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select word #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktS-jy-898">
                                <rect key="frame" x="16" y="16" width="361" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="select-word-1"/>
                                <fontDescription key="fontDescription" name="Figtree-SemiBold" family="Figtree" pointSize="14"/>
                                <color key="textColor" name="Txt8"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select word #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbt-xQ-OTl">
                                <rect key="frame" x="16" y="113" width="361" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="select-word-2"/>
                                <fontDescription key="fontDescription" name="Figtree-SemiBold" family="Figtree" pointSize="14"/>
                                <color key="textColor" name="Txt8"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select word #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzN-dz-Akh">
                                <rect key="frame" x="16" y="210" width="361" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="select-word-3"/>
                                <fontDescription key="fontDescription" name="Figtree-SemiBold" family="Figtree" pointSize="14"/>
                                <color key="textColor" name="Txt8"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select word #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gFZ-8e-fRw">
                                <rect key="frame" x="16" y="307" width="361" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="select-word-4"/>
                                <fontDescription key="fontDescription" name="Figtree-SemiBold" family="Figtree" pointSize="14"/>
                                <color key="textColor" name="Txt8"/>
...
