...
	public func setAddressTypeHeader(_ title: String) {
		addressTypeHeader = title
	}
	
	private func setup() {
		qrCodeButton.accessibilityIdentifier = "qr-button"
		sendButton.accessibilityIdentifier = "send-button"
		
		textField.validator = TezosAddressValidator(ownAddress: DependencyManager.shared.selectedWalletAddress ?? "")
		textField.validatorTextFieldDelegate = self
		
		self.hideError(animate: false)
		self.sendButton.isEnabled = allowEmpty
...
	public func addressTypeChosen(type: AddressType) {
		self.currentSelectedType = type
		
		switch type {
			case .tezosAddress:
				sendToIcon.image = AddressTypeViewController.imageFor(addressType: type)
				addressTypeButton.setTitle("Tezos Address", for: .normal)
				textField.placeholder = "Enter Address"
				textField.validator = TezosAddressValidator(ownAddress: DependencyManager.shared.selectedWalletAddress ?? "")
				
			case .tezosDomain:
				sendToIcon.image = AddressTypeViewController.imageFor(addressType: type)
				addressTypeButton.setTitle("Tezos Domain", for: .normal)
				textField.placeholder = "Enter Tezos Domain"
				textField.validator = TezosDomainValidator()
				
			case .gmail:
				sendToIcon.image = AddressTypeViewController.imageFor(addressType: type)
				addressTypeButton.setTitle("Google", for: .normal)
				textField.placeholder = "Enter Google Account"
...
				addressTypeButton.setTitle("Twitter", for: .normal)
				textField.placeholder = "@ Enter Twitter Handle"
				textField.validator = NoWhiteSpaceStringValidator()
				
			case .email:
				sendToIcon.image = AddressTypeViewController.imageFor(addressType: type)
				addressTypeButton.setTitle("Email", for: .normal)
				textField.placeholder = "Enter email address"
				textField.validator = EmailValidator()
		}
		
		if !textField.revalidateTextfield() {
			self.showError(message: self.messageForType())
...
