...
		if presentedCopyAlert {
			return
		} else {
			presentedCopyAlert = true
		}
		
		self.alert(withTitle: "Copy?",
				   andMessage: "Do you want to copy the recovery phrase?  This phrase gives anyone access to your wallet and funds, copying it to your system clipboard may expose these words to other apps",
				   okText: "Copy",
				   okStyle: .destructive,
				   okAction: { [weak self] action in
			
			if let address = DependencyManager.shared.selectedWalletAddress, let mnemonic = (WalletCacheService().fetchWallet(forAddress: address) as? HDWallet)?.mnemonic {
				UIPasteboard.general.string = mnemonic.words.joined(separator: " ")
			}
...
	
	@IBAction func nextButtonTapped(_ sender: Any) {
		if writtenItDown {
			self.performSegue(withIdentifier: "verify", sender: nil)
			
		} else {
			self.alert(withTitle: "Written the secret Recovery Phrase down?", andMessage: "Without the secret recovery phrase you will not be able to access your key or any assets associated with it.", okText: "Yes", okStyle: .default,
					   okAction: { [weak self] action in
				self?.writtenItDown = true
				self?.performSegue(withIdentifier: "verify", sender: nil)
			}, cancelText: "No", cancelStyle: .default) { action in
				
			}
...
